--- a/Councelling.html
+++ b/Councelling.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>NextChapter Counselling — Videos & Articles for 40+</title>
+  <title>NextChapter Counselling — Videos & Articles for Adnvanced</title>
   <meta name="description" content="Short practical videos and articles supporting people aged 40+. Weekly episodes, guides, and resources." />
   <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
 
